@@ -1,0 +1,25 @@
+{
+  "filename" : "md-eu",
+  "type" : "consumer",
+  "title" : "Mega Drive composite shader set (PAL)",
+  "description" : "A/V was included for most consoles in Europe.  France received a special RGB cable, see md-fr.",
+  "pipeline_root" : "../../pipelines",
+  "pipelines" : [
+    "misc/menu-composite.json",
+    "misc/frame-1728x626.json",
+    "sys/yc-composite.json",
+    "disp/crt.json",
+    "misc/post.json"
+  ],
+  "parameter_root" : "../../params",
+  "parameter_sets" : [
+    "sys/md/base.json",
+    "sys/md/pal.json",
+    "disp/pal.json",
+    "disp/tv.json",
+    "disp/consumer-color-pal.json",
+    "disp/tvl-450.json"
+  ],
+  "parameter_overrides" : {
+  }
+}
