@@ -1,0 +1,13 @@
+{
+    "root_path" : "../../../shaders",
+    "shaders" : {
+        "amp" : "sys-rgb-amp",
+        "sys-bandlimit" : "sys-rgb-bandlimit",
+        "yc" : "sys-yc",
+        "mod" : "yc-composite",
+        "prefilter" : "composite-prefilter",
+        "demod" : "composite-demod",
+        "disp-bandlimit" : "display-rgb-bandlimit",
+        "limiter" : "limiter"
+    }
+}
