@@ -2,6 +2,8 @@ Version 6.1.1
 
 * Add generic presets, based on standard timing.  May not be accurate.
 
+* Add Mega Drive presets
+
 Version 6.1
 
 * Allow for color keyed JPEGs to be used for bezel
